<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
					  http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>br.com.dextra</groupId>
	<artifactId>treinamento-fab</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>Dextra Treinamento</name>

	<modules>
		<module>business</module>
		<module>view</module>
		<module>ear</module>
	</modules>

	<repositories>
		<repository>
			<id>jboss</id>
			<url>http://repository.jboss.org/maven2</url>
		</repository>
		<repository>
                        <id>maven-central</id>
                        <url>https://repository.jboss.org/nexus/content/repositories/central/</url>
                </repository>
		<repository>
			<id>jboss-new</id>
			<url>https://repository.jboss.org/nexus/content/groups/public/</url>
		</repository>
		<repository>
			<id>mycontainer</id>
			<url>http://repo.pyrata.org/release/maven2/</url>
		</repository>
		<repository>
			<id>jsigner</id>
			<url>http://jsigner.googlecode.com/svn/maven2/repository/</url>
		</repository>
                <repository>
                        <id>dextra</id>
                        <url>https://mvn.dextra.com.br/repository/releases/</url>
                </repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>mycontainer</id>
			<url>http://repo.pyrata.org/release/maven2/</url>
		</pluginRepository>
		<pluginRepository>
			<id>jsigner</id>
			<url>http://jsigner.googlecode.com/svn/maven2/repository/</url>
		</pluginRepository>
		<pluginRepository>
			<id>codehaus_snapshots</id>
			<url>http://snapshots.repository.codehaus.org/</url>
		</pluginRepository>
	</pluginRepositories>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-eclipse-plugin</artifactId>
				<version>2.6</version>
			</plugin>
			<plugin>
				<groupId>br.com.jsigner</groupId>
				<artifactId>jsigner-maven-plugin</artifactId>
				<version>1.3</version>
				<configuration>
					<discoverMultiplicityByPersistenceAnnotations>true</discoverMultiplicityByPersistenceAnnotations>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>${jdk.version}</source>
					<target>${jdk.version}</target>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.mycontainer</groupId>
				<artifactId>maven-mycontainer-plugin</artifactId>
				<version>${mycontainer.version}</version>
				<dependencies>
					<dependency>
						<groupId>org.easymock</groupId>
						<artifactId>easymock</artifactId>
						<version>2.5.2</version>
					</dependency>
					<dependency>
						<groupId>org.hibernate</groupId>
						<artifactId>hibernate-core</artifactId>
						<version>3.3.0.GA</version>
					</dependency>
					<dependency>
						<groupId>org.hibernate</groupId>
						<artifactId>hibernate-annotations</artifactId>
						<version>3.4.0.GA</version>
					</dependency>
					<dependency>
						<groupId>org.hibernate</groupId>
						<artifactId>hibernate-entitymanager</artifactId>
						<version>3.4.0.GA</version>
					</dependency>
					<dependency>
						<groupId>org.hibernate</groupId>
						<artifactId>hibernate-ehcache</artifactId>
						<version>3.3.2.GA</version>
					</dependency>
					<dependency>
						<groupId>net.sf.ehcache</groupId>
						<artifactId>ehcache</artifactId>
						<version>1.2.3</version>
					</dependency>
					<dependency>
						<groupId>hsqldb</groupId>
						<artifactId>hsqldb</artifactId>
						<version>1.8.0.7</version>
					</dependency>
					<dependency>
						<groupId>jboss</groupId>
						<artifactId>jboss-annotations-ejb3</artifactId>
						<version>4.2.1.GA</version>
					</dependency>
					<dependency>
						<groupId>org.mycontainer</groupId>
						<artifactId>mycontainer-mail</artifactId>
						<version>${mycontainer.version}</version>
					</dependency>
					<dependency>
						<groupId>org.mycontainer</groupId>
						<artifactId>mycontainer-jms</artifactId>
						<version>${mycontainer.version}</version>
					</dependency>
				</dependencies>
				<configuration>
					<systemProperties>
						<systemProperty>
							<name>org.mortbay.jetty.Request.maxFormContentSize</name>
							<value>500000</value>
						</systemProperty>
					</systemProperties>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
			</plugin>
			<plugin>
				<artifactId>maven-eclipse-plugin</artifactId>
				<version>2.6</version>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<forkMode>once</forkMode>
					<argLine>-Xms128m -Xmx1024m -XX:MaxPermSize=256m</argLine>
					<childDelegation>false</childDelegation>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.6</version>
				<configuration>
					<skipTests>true</skipTests>
				</configuration>
			</plugin>
		</plugins>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>false</filtering>
				<includes>
					<include>**/*.*</include>
				</includes>
			</resource>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
				<includes>
					<include>**/persistence.xml</include>
				</includes>
			</resource>
		</resources>
	</build>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.easymock</groupId>
			<artifactId>easymock</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>commons-fileupload</groupId>
				<artifactId>commons-fileupload</artifactId>
				<version>1.2.1</version>
			</dependency>
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>1.4</version>
			</dependency>
			<dependency>
				<groupId>commons-codec</groupId>
				<artifactId>commons-codec</artifactId>
				<version>1.3</version>
			</dependency>
			<dependency>
				<groupId>jdom</groupId>
				<artifactId>jdom</artifactId>
				<version>1.0</version>
			</dependency>
			<dependency>
				<groupId>commons-lang</groupId>
				<artifactId>commons-lang</artifactId>
				<version>2.4</version>
			</dependency>
			<dependency>
				<groupId>org.hibernate</groupId>
				<artifactId>hibernate-core</artifactId>
				<version>3.3.0.GA</version>
			</dependency>
			<dependency>
				<groupId>org.hibernate</groupId>
				<artifactId>hibernate-annotations</artifactId>
				<version>3.4.0.GA</version>
			</dependency>
			<dependency>
				<groupId>org.hibernate</groupId>
				<artifactId>hibernate-entitymanager</artifactId>
				<version>3.4.0.GA</version>
			</dependency>
			<dependency>
				<groupId>org.hibernate</groupId>
				<artifactId>hibernate-ehcache</artifactId>
				<version>3.3.2.GA</version>
			</dependency>

			<dependency>
				<groupId>br.com.jsigner</groupId>
				<artifactId>jsigner-annotations</artifactId>
				<version>1.3</version>
			</dependency>
			<dependency>
				<groupId>hsqldb</groupId>
				<artifactId>hsqldb</artifactId>
				<version>1.8.0.7</version>
			</dependency>
			<dependency>
				<groupId>org.easymock</groupId>
				<artifactId>easymock</artifactId>
				<version>3.0</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>1.5.6</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-log4j12</artifactId>
				<version>1.5.6</version>
			</dependency>
			<dependency>
				<groupId>log4j</groupId>
				<artifactId>log4j</artifactId>
				<version>1.2.14</version>
			</dependency>
			<dependency>
				<groupId>br.com.dextra</groupId>
				<artifactId>restinpeace</artifactId>
				<version>${restinpeace.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.velocity</groupId>
				<artifactId>velocity</artifactId>
				<version>1.6.2</version>
			</dependency>
			<dependency>
				<groupId>org.apache.velocity</groupId>
				<artifactId>velocity-tools</artifactId>
				<version>2.0-beta3</version>
			</dependency>
			<dependency>
				<groupId>org.beanshell</groupId>
				<artifactId>bsh</artifactId>
				<version>2.0b4</version>
			</dependency>
			<dependency>
				<groupId>br.com.dextra.treinamento-fab.business</groupId>
				<artifactId>dominio</artifactId>
				<type>ejb</type>
				<version>${pom.version}</version>
			</dependency>
			<dependency>
				<groupId>br.com.dextra.treinamento-fab.business</groupId>
				<artifactId>persistence-jpa</artifactId>
				<type>ejb</type>
				<version>${pom.version}</version>
			</dependency>
			<dependency>
				<groupId>br.com.dextra.treinamento-fab.view</groupId>
				<artifactId>main-web</artifactId>
				<type>war</type>
				<version>${pom.version}</version>
			</dependency>
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>4.0</version>
			</dependency>
			<dependency>
				<groupId>javax.ejb</groupId>
				<artifactId>ejb-api</artifactId>
				<version>3.0</version>
			</dependency>
			<dependency>
				<groupId>javax.servlet</groupId>
				<artifactId>servlet-api</artifactId>
				<version>2.5</version>
			</dependency>
			<dependency>
				<groupId>javax.el</groupId>
				<artifactId>el-api</artifactId>
				<version>1.0</version>
			</dependency>
			<dependency>
				<groupId>javax.persistence</groupId>
				<artifactId>persistence-api</artifactId>
				<version>1.0</version>
			</dependency>
			<dependency>
				<groupId>org.mycontainer</groupId>
				<artifactId>mycontainer-ejb</artifactId>
				<version>${mycontainer.version}</version>
			</dependency>
			<dependency>
				<groupId>org.mycontainer</groupId>
				<artifactId>mycontainer-kernel</artifactId>
				<version>${mycontainer.version}</version>
			</dependency>
			<dependency>
				<groupId>org.mycontainer</groupId>
				<artifactId>mycontainer-jpa</artifactId>
				<version>${mycontainer.version}</version>
			</dependency>
			<dependency>
				<groupId>org.mycontainer</groupId>
				<artifactId>mycontainer-datasource</artifactId>
				<version>${mycontainer.version}</version>
			</dependency>
			<dependency>
				<groupId>org.mycontainer</groupId>
				<artifactId>mycontainer-mail</artifactId>
				<version>${mycontainer.version}</version>
			</dependency>
			<dependency>
				<groupId>org.mycontainer</groupId>
				<artifactId>mycontainer-annotations</artifactId>
				<version>${mycontainer.version}</version>
			</dependency>
			<dependency>
				<groupId>org.mycontainer</groupId>
				<artifactId>mycontainer-jms</artifactId>
				<version>${mycontainer.version}</version>
			</dependency>
			<dependency>
				<groupId>org.mycontainer</groupId>
				<artifactId>mycontainer-web</artifactId>
				<version>${mycontainer.version}</version>
			</dependency>
			<dependency>
				<groupId>jboss</groupId>
				<artifactId>jboss-annotations-ejb3</artifactId>
				<version>4.2.1.GA</version>
			</dependency>
			<dependency>
				<groupId>org.jboss.ejb3</groupId>
				<artifactId>jboss-ejb3-ext-api</artifactId>
				<version>1.0.0</version>
			</dependency>
			<dependency>
				<groupId>jboss</groupId>
				<artifactId>jbosssx</artifactId>
				<version>2.0.1-BETA</version>
			</dependency>
			<dependency>
				<groupId>org.jboss.cache</groupId>
				<artifactId>jbosscache-pojo</artifactId>
				<version>3.0.0.GA</version>
			</dependency>
			<dependency>
				<groupId>org.jboss.mx</groupId>
				<artifactId>jboss-j2se</artifactId>
				<version>6.0.0.Beta2</version>
			</dependency>
			<dependency>
				<groupId>org.jboss.javaee</groupId>
				<artifactId>jboss-jacc-api</artifactId>
				<version>1.1.0.GA_SP1</version>
			</dependency>
			<dependency>
				<groupId>javax.annotation</groupId>
				<artifactId>jsr250-api</artifactId>
				<version>1.0</version>
			</dependency>
			<dependency>
				<groupId>commons-httpclient</groupId>
				<artifactId>commons-httpclient</artifactId>
				<version>3.1</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<reporting>
		<outputDirectory>target/site</outputDirectory>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-project-info-reports-plugin
				</artifactId>
				<reportSets>
					<reportSet>
						<reports>
							<report>index</report>
							<report>dependencies</report>
							<report>javadoc</report>
							<report>issue-tracking</report>
							<report>cim</report>
							<report>scm</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>cobertura-maven-plugin</artifactId>
				<version>2.4</version>
				<configuration>
					<formats>
						<format>html</format>
						<format>xml</format>
					</formats>
					<instrumentation>
						<excludes>
							<exclude>**/*Exception.class</exclude>
						</excludes>
					</instrumentation>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<configuration>
					<configLocation>checkstyle/dextra_checks.xml</configLocation>
					<suppressionsLocation>checkstyle/checkstyle-suppressions.xml
					</suppressionsLocation>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>findbugs-maven-plugin</artifactId>
				<configuration>
					<xmlOutput>true</xmlOutput>
					<efford>Max</efford>
					<excludeFilterFile>findbug/filter.xml</excludeFilterFile>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>dashboard-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</reporting>

	<!-- Configuracoes de variaveis do maven -->
	<properties>
		<mycontainer.version>1.1.28</mycontainer.version>
		<jdk.version>1.6</jdk.version>
		<restinpeace.version>3.1.1</restinpeace.version>
	</properties>

</project>
